--- a/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
@@ -268,6 +268,14 @@
 					RelativePath="..\..\..\src\testdtex\TestC3.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\testdtex\TestDirect.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\testdtex\TestDirect.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="format"
