[FIXED] tex load pkg
Former-commit-id: 649eeb99a2218f450be14758642a4f707447a8b8

--- a/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
@@ -254,12 +254,24 @@
 			Name="test"
 			>
 			<File
+				RelativePath="..\..\..\src\testdtex\ITest.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\testdtex\ITest.h"
 				>
 			</File>
 			<Filter
 				Name="normal"
 				>
+				<File
+					RelativePath="..\..\..\src\testdtex\TestC2.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\testdtex\TestC2.h"
+					>
+				</File>
 				<File
 					RelativePath="..\..\..\src\testdtex\TestC3.cpp"
 					>
