[ADDED] dtex stat
Former-commit-id: c8d88878701d3f47fbd63983d11e06df2ebf2395

--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -353,6 +353,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\dtex_statistics.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_statistics.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\dtex_typedef.c"
 				>
 			</File>
