--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -241,6 +241,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\dtex_c1_new.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_c1_new.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\dtex_c2.c"
 				>
 			</File>
@@ -504,6 +512,14 @@
 		<Filter
 			Name="adapter"
 			>
+			<File
+				RelativePath="..\..\..\src\dtex_ej_sprite.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_ej_sprite.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\..\src\dtex_ej_utility.c"
 				>
