[ADDED] new c1 test
Former-commit-id: 930257cafc5dc0d6353b3528b425f02c63a0320c

--- a/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
@@ -281,6 +281,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\testdtex\TestC1New.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\testdtex\TestC1New.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\testdtex\TestC2.cpp"
 					>
 				</File>
