[ADDED] async load
Former-commit-id: ed869c685e67e9d3fef0fc69afc149ae264ed39e

--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -157,6 +157,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\dtex_async_loader.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_async_loader.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\dtex_desc_loader.c"
 				>
 			</File>
@@ -170,6 +178,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\dtex_etc1.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_job_queue.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_job_queue.h"
 				>
 			</File>
 			<File
