--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -149,43 +149,11 @@
 			Name="loader"
 			>
 			<File
-				RelativePath="..\..\..\src\dtex_async.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_async.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_async_loader.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_async_loader.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\dtex_desc_loader.c"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\src\dtex_desc_loader.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_etc1.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_etc1.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_job_queue.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_job_queue.h"
 				>
 			</File>
 			<File
@@ -205,22 +173,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\dtex_png.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_png.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_pvr.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_pvr.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\dtex_stream_import.c"
 				>
 			</File>
@@ -236,80 +188,80 @@
 				RelativePath="..\..\..\src\dtex_texture_loader.h"
 				>
 			</File>
+			<Filter
+				Name="async"
+				>
+				<File
+					RelativePath="..\..\..\src\dtex_async.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_async.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_async_loader.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_async_loader.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_async_queue.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_async_queue.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_async_task.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_async_task.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="decode"
+				>
+				<File
+					RelativePath="..\..\..\src\dtex_etc1.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_etc1.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_png.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_png.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_pvr.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_pvr.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="dataset"
 			>
-			<File
-				RelativePath="..\..\..\src\dtex_b4r.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_b4r.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_c1.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_c1.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_c1_new.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_c1_new.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_c2.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_c2.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_c3.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_c3.h"
-				>
-			</File>
 			<File
 				RelativePath="..\..\..\src\dtex_package.c"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\src\dtex_package.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_pts.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_pts.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_rrp.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_rrp.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_rrr.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_rrr.h"
 				>
 			</File>
 			<File
@@ -320,6 +272,78 @@
 				RelativePath="..\..\..\src\dtex_sprite.h"
 				>
 			</File>
+			<Filter
+				Name="normal"
+				>
+				<File
+					RelativePath="..\..\..\src\dtex_c1.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_c1.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_c1_new.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_c1_new.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_c2.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_c2.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_c3.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_c3.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="extend"
+				>
+				<File
+					RelativePath="..\..\..\src\dtex_b4r.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_b4r.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_pts.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_pts.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_rrp.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_rrp.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_rrr.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\dtex_rrr.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="utility"
