--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -199,6 +199,14 @@
 					Name="nodes"
 					>
 					<File
+						RelativePath="..\..\..\src\libcomplex\AnchorToSpr.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcomplex\AnchorToSpr.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\libcomplex\AnimationToSpr.cpp"
 						>
 					</File>
