[CHANGED] image io interface
Former-commit-id: c5514dbd291f3b77f9a3a5dad30d8afe803855c4

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -728,22 +728,6 @@
 						>
 					</File>
 					<File
-						RelativePath="..\..\..\src\drag2d\dataset\ImageLoader.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\drag2d\dataset\ImageLoader.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\drag2d\dataset\ImageSaver.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\drag2d\dataset\ImageSaver.h"
-						>
-					</File>
-					<File
 						RelativePath="..\..\..\src\drag2d\dataset\ITexture.h"
 						>
 					</File>
@@ -779,6 +763,42 @@
 						RelativePath="..\..\..\src\drag2d\dataset\TexturePacker.h"
 						>
 					</File>
+					<Filter
+						Name="io"
+						>
+						<File
+							RelativePath="..\..\..\src\drag2d\dataset\ImageLoader.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\drag2d\dataset\ImageLoader.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\drag2d\dataset\ImageSaver.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\drag2d\dataset\ImageSaver.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\drag2d\dataset\LibpngAdapter.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\drag2d\dataset\LibpngAdapter.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\drag2d\dataset\PPMAdapter.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\drag2d\dataset\PPMAdapter.h"
+							>
+						</File>
+					</Filter>
 				</Filter>
 			</Filter>
 			<Filter
