--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -432,10 +432,6 @@
 				Name="ejoy2d"
 				>
 				<File
-					RelativePath="..\..\..\external\ejoy2d\ejoy2d.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\..\external\ejoy2d\matrix.c"
 					>
 				</File>
@@ -566,7 +562,7 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\ldtex.c"
+			RelativePath="..\..\..\src\ejoy2d.h"
 			>
 		</File>
 	</Files>
