--- a/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
+++ b/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyimage\src;..\..\..\..\epbin\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\particle\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyparticle3d\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyimage\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\particle\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyparticle3d\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -107,7 +107,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyimage\src;..\..\..\..\epbin\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\particle\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyparticle3d\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyimage\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\particle\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyparticle3d\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -268,6 +268,10 @@
 		<Filter
 			Name="nodes"
 			>
+			<File
+				RelativePath="..\..\..\src\librespacker\IPackNode.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\..\src\librespacker\spritepack.h"
 				>
@@ -568,6 +572,38 @@
 				RelativePath="..\..\..\src\librespacker\PackToLuaString.h"
 				>
 			</File>
+			<Filter
+				Name="image"
+				>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackImage.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackPKM.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackPKM.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackPNG.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackPNG.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackPVR.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackPVR.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="unpack"
@@ -601,10 +637,42 @@
 				>
 			</File>
 		</Filter>
-		<File
-			RelativePath="..\..\..\src\librespacker\IPackNode.h"
+		<Filter
+			Name="tools"
 			>
-		</File>
+			<File
+				RelativePath="..\..\..\src\librespacker\LuaDataHelper.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\librespacker\LuaDataHelper.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\librespacker\Lzma.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\librespacker\Lzma.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\librespacker\pack_unpack.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\librespacker\typedef.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\librespacker\Utility.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\librespacker\Utility.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\librespacker\ResPacker.cpp"
 			>
@@ -619,18 +687,6 @@
 		</File>
 		<File
 			RelativePath="..\..\..\src\librespacker\ResUnpacker.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\librespacker\tools.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\librespacker\Utility.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\librespacker\Utility.h"
 			>
 		</File>
 	</Files>
