--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -558,6 +558,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\ChangeJsonName.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\ChangeJsonName.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb\ChangeTPJsonFile.cpp"
 					>
 				</File>
